--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "dotenv": "^8.2.0",
+    "mysql2": "^2.2.5"
+  }
 }
