--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-mongodb",
+  "name": "ffwenns",
   "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
@@ -10,11 +10,11 @@
     "mongoose": "^5.11.18",
     "next": "latest",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "dotenv": "^8.2.0",
+    "mysql2": "^2.2.5",
+    "php-serialize": "^4.0.2"
   },
   "license": "MIT",
-  "devDependencies": {
-    "dotenv": "^8.2.0",
-    "mysql2": "^2.2.5"
   }
 }
